<resources>
    <string name="app_name">PersonalTrainignApp</string>
    <string name="fill_upFields">Fill up all fields</string>
    <string name="registration_is_done">Registration is done</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exercises">Exercises</string>
    <string name="search">search</string>
    <string name="exercise">Exercise</string>
    <string name="measure">Measure</string>
    <string name="note">Note</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="name">name</string>
    <string name="equipment">equipment</string>
    <string name="target_muscle">target muscle</string>
    <string name="secondary_muscle">secondary muscle</string>
    <string name="instructions">instructions</string>
    <string name="edit">Edit</string>
    <string name="old_password">old password</string>
    <string name="new_password">new password</string>
    <string name="save">Save</string>
    <string name="old_password_is_required">Old password is required</string>
    <string name="user_not_found">User not found</string>
    <string name="profile_updated">Profile updated</string>
    <string name="logout">logout</string>
    <string name="start">START</string>
    <string name="workout_image">workout image</string>
    <string name="weights_kg">Weights(kg)</string>
    <string name="reps">Reps</string>
    <string name="image_url">image url</string>
    <string name="upload">Upload</string>
    <string name="add_exercise">Add exercise</string>
    <string name="day1">Day1</string>
    <string name="day2">Day2</string>
    <string name="day3">Day3</string>
    <string name="day4">Day4</string>
    <string name="day5">Day5</string>
    <string name="day6">Day6</string>
    <string name="day7">Day7</string>
    <string name="edit_workout_plan"><u>Edit Workout Plan</u></string>
    <string name="completed">Completed</string>
    <string name="no_plan_is_set_yet">No plan is set yet!</string>
    <string name="failed">Failed</string>
</resources>